while/build/WhileParser.cpp

#include <iostream>
#include <list>

#include "WhileLang.h"
#include "WhileCFG.h"


// Generated from /cal/exterieurs/rcarvalho-23/SE206/raynner-schnneider-carvalho/while/src/While.g4 by ANTLR 4.7.2


#include "WhileListener.h"

#include "WhileParser.h"


using namespace antlrcpp;
using namespace antlr4;

WhileParser::WhileParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

WhileParser::~WhileParser() {
  delete _interpreter;
}

std::string WhileParser::getGrammarFileName() const {
  return "While.g4";
}

const std::vector<std::string>& WhileParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& WhileParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- ProgramContext ------------------------------------------------------------------

WhileParser::ProgramContext::ProgramContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* WhileParser::ProgramContext::EOF() {
  return getToken(WhileParser::EOF, 0);
}

std::vector<WhileParser::DefinitionContext *> WhileParser::ProgramContext::definition() {
  return getRuleContexts<WhileParser::DefinitionContext>();
}

WhileParser::DefinitionContext* WhileParser::ProgramContext::definition(size_t i) {
  return getRuleContext<WhileParser::DefinitionContext>(i);
}


size_t WhileParser::ProgramContext::getRuleIndex() const {
  return WhileParser::RuleProgram;
}

void WhileParser::ProgramContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<WhileListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterProgram(this);
}

void WhileParser::ProgramContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<WhileListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitProgram(this);
}

WhileParser::ProgramContext* WhileParser::program() {
  ProgramContext *_localctx = _tracker.createInstance<ProgramContext>(_ctx, getState());
  enterRule(_localctx, 0, WhileParser::RuleProgram);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    defaultFunctions();
    setState(34);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == WhileParser::T__0

    || _la == WhileParser::T__26) {
      setState(31);
      definition();
      setState(36);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(37);
    match(WhileParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Param_declContext ------------------------------------------------------------------

WhileParser::Param_declContext::Param_declContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* WhileParser::Param_declContext::ID() {
  return getToken(WhileParser::ID, 0);
}

tree::TerminalNode* WhileParser::Param_declContext::N() {
  return getToken(WhileParser::N, 0);
}


size_t WhileParser::Param_declContext::getRuleIndex() const {
  return WhileParser::RuleParam_decl;
}

void WhileParser::Param_declContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<WhileListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterParam_decl(this);
}

void WhileParser::Param_declContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<WhileListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitParam_decl(this);
}

WhileParser::Param_declContext* WhileParser::param_decl() {
  Param_declContext *_localctx = _tracker.createInstance<Param_declContext>(_ctx, getState());
  enterRule(_localctx, 2, WhileParser::RuleParam_decl);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(52);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 1, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(39);
      match(WhileParser::T__0);
      setState(40);
      dynamic_cast<Param_declContext *>(_localctx)->idToken = match(WhileParser::ID);
      Functions.back().Parameters.Symbols.emplace_back((dynamic_cast<Param_declContext *>(_localctx)->idToken != nullptr ? dynamic_cast<Param_declContext *>(_localctx)->idToken->getText() : ""), WINT, 1, Functions.back().Parameters.Size++);
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(42);
      match(WhileParser::T__0);
      setState(43);
      dynamic_cast<Param_declContext *>(_localctx)->idToken = match(WhileParser::ID);
      setState(44);
      match(WhileParser::T__1);
      setState(45);
      dynamic_cast<Param_declContext *>(_localctx)->nToken = match(WhileParser::N);
      setState(46);
      match(WhileParser::T__2);
      Functions.back().Parameters.Symbols.emplace_back((dynamic_cast<Param_declContext *>(_localctx)->idToken != nullptr ? dynamic_cast<Param_declContext *>(_localctx)->idToken->getText() : ""), WARY, (dynamic_cast<Param_declContext *>(_localctx)->nToken != nullptr ? std::stoi(dynamic_cast<Param_declContext *>(_localctx)->nToken->getText()) : 0), Functions.back().Parameters.Size); Functions.back().Parameters.Size+=(dynamic_cast<Param_declContext *>(_localctx)->nToken != nullptr ? std::stoi(dynamic_cast<Param_declContext *>(_localctx)->nToken->getText()) : 0);
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(48);
      match(WhileParser::T__0);
      setState(49);
      match(WhileParser::T__3);
      setState(50);
      dynamic_cast<Param_declContext *>(_localctx)->idToken = match(WhileParser::ID);
      Functions.back().Parameters.Symbols.emplace_back((dynamic_cast<Param_declContext *>(_localctx)->idToken != nullptr ? dynamic_cast<Param_declContext *>(_localctx)->idToken->getText() : ""), WPTR, 1, Functions.back().Parameters.Size++);
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Int_initContext ------------------------------------------------------------------

WhileParser::Int_initContext::Int_initContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

WhileParser::Int_initContext::Int_initContext(ParserRuleContext *parent, size_t invokingState, WhileSymbol * Sym)
  : ParserRuleContext(parent, invokingState) {
  this->Sym = Sym;
}

tree::TerminalNode* WhileParser::Int_initContext::N() {
  return getToken(WhileParser::N, 0);
}


size_t WhileParser::Int_initContext::getRuleIndex() const {
  return WhileParser::RuleInt_init;
}

void WhileParser::Int_initContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<WhileListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterInt_init(this);
}

void WhileParser::Int_initContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<WhileListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitInt_init(this);
}

WhileParser::Int_initContext* WhileParser::int_init(WhileSymbol * Sym) {
  Int_initContext *_localctx = _tracker.createInstance<Int_initContext>(_ctx, getState(), Sym);
  enterRule(_localctx, 4, WhileParser::RuleInt_init);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(54);
    match(WhileParser::T__4);
    setState(55);
    dynamic_cast<Int_initContext *>(_localctx)->nToken = match(WhileParser::N);
    _localctx->Sym->Init.emplace_back((dynamic_cast<Int_initContext *>(_localctx)->nToken != nullptr ? std::stoi(dynamic_cast<Int_initContext *>(_localctx)->nToken->getText()) : 0));
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Array_initContext ------------------------------------------------------------------

WhileParser::Array_initContext::Array_initContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

WhileParser::Array_initContext::Array_initContext(ParserRuleContext *parent, size_t invokingState, WhileSymbol * Sym)
  : ParserRuleContext(parent, invokingState) {
  this->Sym = Sym;
}

std::vector<tree::TerminalNode *> WhileParser::Array_initContext::N() {
  return getTokens(WhileParser::N);
}

tree::TerminalNode* WhileParser::Array_initContext::N(size_t i) {
  return getToken(WhileParser::N, i);
}

tree::TerminalNode* WhileParser::Array_initContext::S() {
  return getToken(WhileParser::S, 0);
}


size_t WhileParser::Array_initContext::getRuleIndex() const {
  return WhileParser::RuleArray_init;
}

void WhileParser::Array_initContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<WhileListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterArray_init(this);
}

void WhileParser::Array_initContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<WhileListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitArray_init(this);
}

WhileParser::Array_initContext* WhileParser::array_init(WhileSymbol * Sym) {
  Array_initContext *_localctx = _tracker.createInstance<Array_initContext>(_ctx, getState(), Sym);
  enterRule(_localctx, 6, WhileParser::RuleArray_init);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(74);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 3, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(58);
      match(WhileParser::T__4);
      setState(59);
      match(WhileParser::T__5);
      setState(60);
      dynamic_cast<Array_initContext *>(_localctx)->v1 = match(WhileParser::N);
      _localctx->Sym->Init.emplace_back((dynamic_cast<Array_initContext *>(_localctx)->v1 != nullptr ? std::stoi(dynamic_cast<Array_initContext *>(_localctx)->v1->getText()) : 0));
      setState(67);
      _errHandler->sync(this);
      _la = _input->LA(1);
      while (_la == WhileParser::T__6) {
        setState(62);
        match(WhileParser::T__6);
        setState(63);
        dynamic_cast<Array_initContext *>(_localctx)->vn = match(WhileParser::N);
        _localctx->Sym->Init.emplace_back((dynamic_cast<Array_initContext *>(_localctx)->vn != nullptr ? std::stoi(dynamic_cast<Array_initContext *>(_localctx)->vn->getText()) : 0));
        setState(69);
        _errHandler->sync(this);
        _la = _input->LA(1);
      }
      setState(70);
      match(WhileParser::T__7);
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(71);
      match(WhileParser::T__4);
      setState(72);
      dynamic_cast<Array_initContext *>(_localctx)->sToken = match(WhileParser::S);
      initStringSymbol((dynamic_cast<Array_initContext *>(_localctx)->sToken != nullptr ? dynamic_cast<Array_initContext *>(_localctx)->sToken->getText() : ""), _localctx->Sym);
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Var_defContext ------------------------------------------------------------------

WhileParser::Var_defContext::Var_defContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

WhileParser::Var_defContext::Var_defContext(ParserRuleContext *parent, size_t invokingState, WhileScope * Scope)
  : ParserRuleContext(parent, invokingState) {
  this->Scope = Scope;
}

tree::TerminalNode* WhileParser::Var_defContext::ID() {
  return getToken(WhileParser::ID, 0);
}

WhileParser::Int_initContext* WhileParser::Var_defContext::int_init() {
  return getRuleContext<WhileParser::Int_initContext>(0);
}

tree::TerminalNode* WhileParser::Var_defContext::N() {
  return getToken(WhileParser::N, 0);
}

WhileParser::Array_initContext* WhileParser::Var_defContext::array_init() {
  return getRuleContext<WhileParser::Array_initContext>(0);
}


size_t WhileParser::Var_defContext::getRuleIndex() const {
  return WhileParser::RuleVar_def;
}

void WhileParser::Var_defContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<WhileListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterVar_def(this);
}

void WhileParser::Var_defContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<WhileListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitVar_def(this);
}

WhileParser::Var_defContext* WhileParser::var_def(WhileScope * Scope) {
  Var_defContext *_localctx = _tracker.createInstance<Var_defContext>(_ctx, getState(), Scope);
  enterRule(_localctx, 8, WhileParser::RuleVar_def);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(105);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 7, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(76);
      match(WhileParser::T__0);
      setState(77);
      dynamic_cast<Var_defContext *>(_localctx)->idToken = match(WhileParser::ID);
      Scope->Symbols.emplace_back((dynamic_cast<Var_defContext *>(_localctx)->idToken != nullptr ? dynamic_cast<Var_defContext *>(_localctx)->idToken->getText() : ""), WINT, 1, Scope->Size++); dynamic_cast<Var_defContext *>(_localctx)->Sym = &Scope->Symbols.back();
      setState(80);
      _errHandler->sync(this);

      _la = _input->LA(1);
      if (_la == WhileParser::T__4) {
        setState(79);
        int_init(_localctx->Sym);
      }
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(82);
      match(WhileParser::T__0);
      setState(83);
      dynamic_cast<Var_defContext *>(_localctx)->idToken = match(WhileParser::ID);
      setState(84);
      match(WhileParser::T__1);
      setState(85);
      dynamic_cast<Var_defContext *>(_localctx)->nToken = match(WhileParser::N);
      setState(86);
      match(WhileParser::T__2);
      Scope->Symbols.emplace_back((dynamic_cast<Var_defContext *>(_localctx)->idToken != nullptr ? dynamic_cast<Var_defContext *>(_localctx)->idToken->getText() : ""), WARY, (dynamic_cast<Var_defContext *>(_localctx)->nToken != nullptr ? std::stoi(dynamic_cast<Var_defContext *>(_localctx)->nToken->getText()) : 0), Scope->Size); Scope->Size += (dynamic_cast<Var_defContext *>(_localctx)->nToken != nullptr ? std::stoi(dynamic_cast<Var_defContext *>(_localctx)->nToken->getText()) : 0); dynamic_cast<Var_defContext *>(_localctx)->Sym = &Scope->Symbols.back();
      setState(89);
      _errHandler->sync(this);

      _la = _input->LA(1);
      if (_la == WhileParser::T__4) {
        setState(88);
        array_init(_localctx->Sym);
      }
      checkArrayInit(_localctx->Sym, dynamic_cast<Var_defContext *>(_localctx)->idToken);
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(92);
      match(WhileParser::T__0);
      setState(93);
      dynamic_cast<Var_defContext *>(_localctx)->idToken = match(WhileParser::ID);
      setState(94);
      match(WhileParser::T__1);
      setState(95);
      match(WhileParser::T__2);
      Scope->Symbols.emplace_back((dynamic_cast<Var_defContext *>(_localctx)->idToken != nullptr ? dynamic_cast<Var_defContext *>(_localctx)->idToken->getText() : ""), WARY, 0, Scope->Size); dynamic_cast<Var_defContext *>(_localctx)->Sym = &Scope->Symbols.back();
      setState(98);
      _errHandler->sync(this);

      _la = _input->LA(1);
      if (_la == WhileParser::T__4) {
        setState(97);
        array_init(_localctx->Sym);
      }
      _localctx->Sym->Size = _localctx->Sym->Init.size(); ;Scope->Size += _localctx->Sym->Size; 
      break;
    }

    case 4: {
      enterOuterAlt(_localctx, 4);
      setState(101);
      match(WhileParser::T__0);
      setState(102);
      match(WhileParser::T__3);
      setState(103);
      dynamic_cast<Var_defContext *>(_localctx)->idToken = match(WhileParser::ID);
      Scope->Symbols.emplace_back((dynamic_cast<Var_defContext *>(_localctx)->idToken != nullptr ? dynamic_cast<Var_defContext *>(_localctx)->idToken->getText() : ""), WPTR, 1, Scope->Size++); dynamic_cast<Var_defContext *>(_localctx)->Sym = &Scope->Symbols.back();
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Call_argsContext ------------------------------------------------------------------

WhileParser::Call_argsContext::Call_argsContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<WhileParser::ExprContext *> WhileParser::Call_argsContext::expr() {
  return getRuleContexts<WhileParser::ExprContext>();
}

WhileParser::ExprContext* WhileParser::Call_argsContext::expr(size_t i) {
  return getRuleContext<WhileParser::ExprContext>(i);
}


size_t WhileParser::Call_argsContext::getRuleIndex() const {
  return WhileParser::RuleCall_args;
}

void WhileParser::Call_argsContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<WhileListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterCall_args(this);
}

void WhileParser::Call_argsContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<WhileListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitCall_args(this);
}

WhileParser::Call_argsContext* WhileParser::call_args() {
  Call_argsContext *_localctx = _tracker.createInstance<Call_argsContext>(_ctx, getState());
  enterRule(_localctx, 10, WhileParser::RuleCall_args);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(118);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case WhileParser::T__3:
      case WhileParser::T__8:
      case WhileParser::T__10:
      case WhileParser::ID:
      case WhileParser::N: {
        enterOuterAlt(_localctx, 1);
        setState(107);
        dynamic_cast<Call_argsContext *>(_localctx)->exprContext = expr(0);
        dynamic_cast<Call_argsContext *>(_localctx)->a.push_back(dynamic_cast<Call_argsContext *>(_localctx)->exprContext);
        setState(112);
        _errHandler->sync(this);
        _la = _input->LA(1);
        while (_la == WhileParser::T__6) {
          setState(108);
          match(WhileParser::T__6);
          setState(109);
          dynamic_cast<Call_argsContext *>(_localctx)->exprContext = expr(0);
          dynamic_cast<Call_argsContext *>(_localctx)->a.push_back(dynamic_cast<Call_argsContext *>(_localctx)->exprContext);
          setState(114);
          _errHandler->sync(this);
          _la = _input->LA(1);
        }
        dynamic_cast<Call_argsContext *>(_localctx)->args =  dynamic_cast<Call_argsContext *>(_localctx)->a;
        break;
      }

      case WhileParser::T__9: {
        enterOuterAlt(_localctx, 2);

        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ExprContext ------------------------------------------------------------------

WhileParser::ExprContext::ExprContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t WhileParser::ExprContext::getRuleIndex() const {
  return WhileParser::RuleExpr;
}
